--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,15 @@
     <h1>My Cart</h1>
   </header>
 
+<% if cart.count == 0 %>
+    <div id="empty_cart">
+      <h2>
+        Your cart is empty at the moment. 
+      </h2>
+  <button><%= link_to 'Home', :root %> </button>
+  </div>
+
+<% else %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -48,5 +57,5 @@
       <% end %>
     </div>
   </div>
-
+<% end %>
 </section>
