--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h1>Admin Dashboard</h1>
+
+<div class="alert alert-info" role="alert"> 
+<h4>The current count of products in the catalogue is: <%= @count_products%></h4>
+</div>
+<h4 class="alert alert-info"> The current number of categories in the catalogue is:  <%= @count_categories%></h4>
