--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Admin Dashboard</h1>
 
-<div class="alert alert-info" role="alert"> 
-<h4>The current count of products in the catalogue is: <%= @count_products%></h4>
+<div class="alert alert-warning" role="alert"> 
+<h4>The current count of <%= link_to "products","/admin/products"%> in the catalogue is: <%= @count_products%></h4>
 </div>
-<h4 class="alert alert-info"> The current number of categories in the catalogue is:  <%= @count_categories%></h4>
+<h4 class="alert alert-warning"> The current number of categories in the catalogue is:  <%= @count_categories%></h4>
