--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,15 @@
 <body>
 
   <%= render 'layouts/top_nav' %>
-
+<% if notice %>
+      	    <%= notice %>
+	<% end %>
+	
+	<% if alert %>
+  
+      	    <%= alert %>
+	<% end %>
+ 
   <main class="container">
     <%= yield %>
   </main>
