--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,13 @@
 	<% end %>
  
   <main class="container">
+
+  <%if active_sale?%>
+    <p class="alert alert-info">
+    There's an active <%= "test_current" %> sale going on! Everything is <%='15%'%> off!
+    </p>
+    <%end%>
+
     <%= yield %>
   </main>
 
