--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,28 +1,28 @@
 <h1>Sign Up</h1>
 
 <%= form_for @user do |f| %>
-  <div>
+  <div class="form-group">
     <%= f.label :first_name %>
     <%= f.text_field :first_name, autofocus: true %>
   </div>
-  <div>
+  <div class="form-group">
     <%= f.label :last_name %>
     <%= f.text_field :last_name %>
   </div>
-  <div>
+  <div class="form-group">
     <%= f.label :email %>
     <%= f.text_field :email %>
   </div>
 
-  <div>
+  <div class="form-group">
     <%= f.label :password %>
     <%= f.password_field :password %>
   </div>
-  <div>
+  <div class="form-group">
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
   </div>
-  <div>
-    <%= f.submit "Sign up!" %>
+  <div class="form-group">
+    <%= f.submit "Sign up!", class: "btn btn-primary" %>
   </div>
 <% end %>
