--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,13 @@
 <body>
 
   <%= render 'layouts/top_nav' %>
+  <main class="container">
   <% if current_user %>
       <!-- current_user will return true if a user is logged in -->
-      <%= "Logged in as #{current_user.email}" %> | <%= link_to 'Home', root_path %> | <%= link_to 'Log Out', logout_path, method: :delete %>
+      <%= "Logged in" %> | <%= link_to 'Log Out', logout_path, method: :delete %>
     <% else %>
       <!-- not logged in -->
-      <%= link_to 'Home', root_path %> | <%= link_to 'Log In', login_path %> or <%= link_to 'Sign Up', new_users_path %>
+    <%= link_to 'Log In', login_path %> or <%= link_to 'Sign Up', new_users_path %>
     <% end %>
     <hr>
 <% if notice %>
@@ -26,7 +27,6 @@
       	    <%= alert %>
 	<% end %>
  
-  <main class="container">
 
   <%if active_sale?%>
     <p class="alert alert-info">
