--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,1 +1,2 @@
 <h1 style="color: orange"> Welcome to the <strong>Jungle</strong> </h1>
+<img src="https://www.kyozou.com/wp-content/uploads/2017/01/9999f2f37d7db654db24cf3ba026d68f.jpg">
